# ride4

./: .gitignore  README.md  deploy.sh
client/: :q  :w  README.md  angular.json  package-lock.json  package.json
client/e2e/src/: app.e2e-spec.ts
client/src/: index.html  main.ts  styles.scss
client/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  app.module.ts.bak
client/src/app/models/: app-injector.service.ts  communication.service.ts  constants.ts  gui.service.ts  map.service.ts  remote.service.ts  routeReuse.service.ts  signin.service.ts  tables.ts
client/src/app/views/activity/: activity.component.html  (+1 more)
client/src/assets/html/: flash.html  privacy.html  privacy.html.sierra  promo.html  tos.html  tos.html.orig  tos2.html
client/src/assets/javascripts/: crypto.js  httpclient.js  linkedin.js  map.js
client/src/assets/stylesheets/: detail.scss  hero.css  mat-radio-button.scss  reset.scss
html/: privacy.html  privacy.html.orig
server/: .gitignore  Cargo.toml  README.md
server/etc/httpd/conf.d/: ride.beegrove.com-le-ssl.conf  ride.beegrove.com-reverse-proxy.conf  ride.beegrove.com.conf
server/etc/nginx/conf.d/: rideshare_https.conf
server/nginx/etc/nginx/: nginx.conf
server/nginx/etc/nginx/conf.d/: rideshare.conf
server/src/: constants.rs  handlers.rs  lib.rs  linkedin.rs  reqres.rs  router_util.rs  send_mail.rs  tables.rs  token.rs  util.rs
server/src/sql/: .func.sql.swp  create.sql  func.sql
server/tests/: db.rs  router_util.rs  tables.rs
server/tests/common/: mod.rs
(+46 files in other folders)
